port bookstore from controller to 'service' - gi
