# src/controllers/bookController.ts
@@ -1,20 +1,9 @@
 // This is a simple controller to gain an undertanding of tsoa swagger generation and open API validator
-import { Controller, Post, Put, Get, Route, Body, Tags, Path, Query, SuccessResponse } from 'tsoa';
+// tsoa looks for annotations, interfaces, types, jsDoc associated with a Controller
+// to generate swagger documentation and routes to be registered with the app
+import { Controller, Post, Put, Get, Route, Body, Tags, Path, Query, SuccessResponse, Response } from 'tsoa';
+import { Book, createBook, updateBook, getBooks, getBookById } from '../services/bookService';
 import { logger } from '../services/loggingService';
-
-export type BookStatus = 'New' | 'Used' | 'Out Of Stock';
-export interface Book {
-  id: number;
-  author: string;
-  title: string;
-  status: BookStatus;
-  description?: string;
-}
-
-const inventory: Array<Book> = [
-  { id: 1, author: 'Bill Smith', title: 'They call me Billy', status: 'New' },
-  { id: 2, author: 'Jim Smith', title: 'They call me Jimmy', status: 'Used' },
-];
 
 @Route('books')
 export class bookController extends Controller {
@@ -24,8 +13,8 @@ export class bookController extends Controller {
   @Tags('Books')
   @Post()
   @SuccessResponse('201', 'Created')
-  public async postBook(@Body() body: Book): Promise<any> {
-    inventory.push(body);
+  public async postBook(@Body() book: Book): Promise<void> {
+    await createBook(book);
     this.setStatus(201);
     return;
   }
@@ -33,9 +22,15 @@ export class bookController extends Controller {
   /**
    * Updates one or more book properties
    */
+  @SuccessResponse('200', 'Updated')
+  @Response('404', 'Unable to find book')
+  @Tags('Books')
   @Put('{bookId}')
-  public async putBook(@Path() bookId: number, @Body() body: Partial<Book>): Promise<any> {
-    return { message: 'not implemented', bookId, body };
+  public async putBook(@Path() bookId: number, @Body() book: Partial<Book>): Promise<void> {
+    const wasBookFound = await updateBook(bookId, book);
+    if (wasBookFound) return;
+    this.setStatus(404);
+    return;
   }
 
   /**
@@ -44,9 +39,23 @@ export class bookController extends Controller {
    * @isInt page_size page_size should be a positive integer
    * @minimum page_size 1
    */
+  @Tags('Books')
   @Get()
   public async getBooks(@Query() page_size: number, @Query() page_number?: number): Promise<Array<Book>> {
     logger.warn(`ignoring page_number of ${page_number} and a page_size of ${page_size}`);
-    return inventory;
+    return await getBooks();
+  }
+
+  /**
+   * Get a book by ID
+   */
+  @Response('404', 'Unable to find book')
+  @Tags('Books')
+  @Get('{bookId}')
+  public async getBook(@Path() bookId: number): Promise<Book> {
+    const book = await getBookById(bookId);
+    if (book) return book;
+    this.setStatus(404);
+    return;
   }
 }
